fix(renderer): fix the body overflow

--- a/packages/varlet-lowcode-renderer/src/renderer.less
+++ b/packages/varlet-lowcode-renderer/src/renderer.less
@@ -1,4 +1,4 @@
-.varlet-low-code-renderer {
+.varlet-low-code-renderer__designer {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
 }
